--- a/index.html
+++ b/index.html
@@ -1,12 +1,110 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15">
-<title></title>
+  <meta http-equiv="Content-Type" content=
+  "text/html; charset=utf-8" />
+
+  <title>My First Bitstarter</title>
+  <link type="text/css" rel="stylesheet" href=
+  "https://d396qusza40orc.cloudfront.net/startup%20bootstrap-2.3.2.css" />
+
+  <style type="text/css">
+/*<![CDATA[*/
+  body {
+  padding-top: 20px;
+  padding-bottom: 40px;
+  }
+  .container {
+  width: 960px;
+  }
+  p.lead {
+  padding-top: 15px;
+  }
+  .navigation, .pitch, .selection, .section1, .section2, .faq, .footer {
+  padding: 10px 0px 10px 0px;
+  }
+  .video, .thermometer, .order, .social {
+  border: 1px dotted;
+  text-align: center;
+  }
+  .video {
+  /* Internal border have 1px width, thus need to add 4 x 1px to 120px. */
+  height: 124px;
+  line-height: 124px;
+  }
+  .thermometer, .order, .social {
+  /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
+  height: 40px;
+  line-height: 40px;
+  }
+  div.row {
+  border: 1px solid;
+  }
+  /*]]>*/
+  </style>
 </head>
 
 <body>
-<h1>Hello World from index.html</h1>
-<hr>
-<address></address>
-</body> </html>
+  <div class="container">
+    <div class="row navigation">
+      <div class="span2 logo">
+        Logo
+      </div>
+
+      <div class="span6 blank">
+        Blank
+      </div>
+
+      <div class="span4 about">
+        About
+      </div>
+    </div>
+
+    <div class="row heading span12">
+      <h1>Bitstarter Title</h1>
+    </div>
+
+    <div class="row subheading span12">
+      <p class="lead">This is my first bitstarter project.</p>
+    </div>
+
+    <div class="row pitch">
+      <div class="span6 video">
+        Video
+      </div>
+
+      <div class="span6">
+        <div class="thermometer">
+          Thermometer
+        </div>
+
+        <div class="order">
+          Order
+        </div>
+
+        <div class="social">
+          Social
+        </div>
+      </div>
+    </div>
+
+    <div class="row section1 span12">
+      Marketing Section 1
+    </div>
+
+    <div class="row section2 span12">
+      Marketing Section 2
+    </div>
+
+    <div class="row faq span12">
+      FAQ
+    </div>
+
+    <div class="row footer span12">
+      Footer
+    </div>
+  </div>
+</body>
+</html>
