--- a/index.html
+++ b/index.html
@@ -62,12 +62,16 @@
       </div>
     </div>
 
-    <div class="row heading span12">
-      <h1>Bitstarter Title</h1>
+    <div class="row heading">
+      <div class="span12">
+         <h1>Bitstarter Title</h1>
+      </div>
     </div>
 
-    <div class="row subheading span12">
-      <p class="lead">This is my first bitstarter project.</p>
+    <div class="row subheading">
+      <div class="span12">
+        <p class="lead">This is my first bitstarter project.</p>
+      </div>
     </div>
 
     <div class="row pitch">
@@ -90,20 +94,28 @@
       </div>
     </div>
 
-    <div class="row section1 span12">
-      Marketing Section 1
+    <div class="row section1">
+      <div class="span12">
+        Marketing Section 1
+      </div>
     </div>
 
-    <div class="row section2 span12">
-      Marketing Section 2
+    <div class="row section2">
+      <div class="span12">
+        Marketing Section 2
+      </div>
     </div>
 
-    <div class="row faq span12">
-      FAQ
+    <div class="row faq">
+      <div class="span12">
+	FAQ
+      </div>
     </div>
 
-    <div class="row footer span12">
-      Footer
+    <div class="row footer">
+      <div class="span12">
+	Footer
+      </div>
     </div>
   </div>
 </body>
